fix z-index of top searchbox

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 70vw;
+    width: 65vw;
     border-radius: 5px;
     transition: all 0.3s; }
   .search__input {
@@ -108,7 +108,8 @@ body {
     background: #1e3799;
     height: 28rem;
     position: fixed;
-    top: 0; }
+    top: 0;
+    z-index: 50; }
     .search__top-box {
       padding-top: 4rem;
       max-width: 55rem; }
