--- a/sass/components/_searchbox.scss
+++ b/sass/components/_searchbox.scss
@@ -10,7 +10,7 @@
         top: 40%;
         left: 50%;
         transform: translate(-50%,-50%);
-        width: 70vw;
+        width: 65vw;
        // background: rgba($color-blue,0.1);
         border-radius: 5px;
         transition: all 0.3s;
@@ -78,6 +78,7 @@
         height: 28rem;
         position: fixed;
         top: 0;
+        z-index: 50;
         &-box {
             padding-top: 4rem;
             max-width: 55rem;
